--- a/templates/workflow/reports_dashboard.html
+++ b/templates/workflow/reports_dashboard.html
@@ -16,17 +16,6 @@
                         <div class="col-md-3 mb-4">
                             <div class="card h-100">
                                 <div class="card-body text-center">
-                                    <i class="fas fa-boxes fa-3x text-primary mb-3"></i>
-                                    <h5 class="card-title">گزارش موجودی</h5>
-                                    <p class="card-text">گزارش موجودی انبار به تفکیک محصول</p>
-                                    <a href="{% url 'inventory-report' %}" class="btn btn-primary">مشاهده</a>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="col-md-3 mb-4">
-                            <div class="card h-100">
-                                <div class="card-body text-center">
                                     <i class="fas fa-shopping-cart fa-3x text-success mb-3"></i>
                                     <h5 class="card-title">گزارش سفارشات</h5>
                                     <p class="card-text">گزارش سفارشات به تفکیک وضعیت و تاریخ</p>
@@ -61,21 +50,15 @@
                     <div class="row mt-4">
                         <div class="col-md-6 mb-4">
                             <div class="card h-100">
-                                <div class="card-header bg-info text-white">
-                                    <h5 class="mb-0">آمار کلی سیستم</h5>
+                                <div class="card-header bg-primary text-white">
+                                    <h5 class="mb-0">آمار محصولات و کاربران</h5>
                                 </div>
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-md-6 mb-3">
                                             <div class="d-flex justify-content-between align-items-center border-bottom pb-2">
-                                                <span><i class="fas fa-cubes mr-2"></i> تعداد کل محصولات:</span>
+                                                <span><i class="fas fa-box mr-2"></i> تعداد محصولات:</span>
                                                 <span class="badge badge-primary">{{ total_products }}</span>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6 mb-3">
-                                            <div class="d-flex justify-content-between align-items-center border-bottom pb-2">
-                                                <span><i class="fas fa-shopping-cart mr-2"></i> تعداد کل سفارشات:</span>
-                                                <span class="badge badge-success">{{ total_orders }}</span>
                                             </div>
                                         </div>
                                         <div class="col-md-6 mb-3">
