--- a/templates/workflow/product_confirm_delete.html
+++ b/templates/workflow/product_confirm_delete.html
@@ -1,5 +1,6 @@
 {% extends 'workflow/base.html' %}
 {% load static %}
+{% load workflow_filters %}
 
 {% block title %}تایید حذف محصول - سیستم مدیریت انبار{% endblock %}
 
