--- a/templates/workflow/orders_report.html
+++ b/templates/workflow/orders_report.html
@@ -1,6 +1,7 @@
 {% extends 'workflow/base.html' %}
 {% load static %}
 {% load jdate_filters %}
+{% load workflow_filters %}
 
 {% block title %}گزارش سفارشات - سیستم مدیریت انبار{% endblock %}
 
@@ -90,7 +91,7 @@
                                 <span class="badge bg-success">دریافت شده</span>
                                 {% endif %}
                             </td>
-                            <td>{{ order.total_price|floatformat:0 }}</td>
+                            <td>{{ order.total_price|format_price }}</td>
                             <td>
                                 <div class="btn-group" role="group">
                                     <a href="{% url 'order-detail' order.id %}" class="btn btn-sm btn-info" title="مشاهده جزئیات">
@@ -112,7 +113,7 @@
                     <tfoot class="bg-light">
                         <tr>
                             <td colspan="7" class="text-left font-weight-bold">مجموع</td>
-                            <td class="font-weight-bold">{{ total_revenue|floatformat:0 }}</td>
+                            <td class="font-weight-bold">{{ total_revenue|format_price }}</td>
                             <td></td>
                         </tr>
                     </tfoot>
@@ -146,7 +147,7 @@
                             </div>
                             <div class="d-flex justify-content-between">
                                 <strong>مجموع مبلغ:</strong>
-                                <span>{{ total_revenue|floatformat:0 }}</span>
+                                <span>{{ total_revenue|format_price }}</span>
                             </div>
                         </div>
                     </div>
@@ -171,7 +172,7 @@
                                     <tr>
                                         <td>{{ branch.branch_name }}</td>
                                         <td>{{ branch.order_count }}</td>
-                                        <td>{{ branch.total_amount|floatformat:0 }}</td>
+                                        <td>{{ branch.total_amount|format_price }}</td>
                                     </tr>
                                     {% empty %}
                                     <tr>
