--- a/templates/workflow/driver_form.html
+++ b/templates/workflow/driver_form.html
@@ -24,7 +24,7 @@
                         {{ form.name|as_crispy_field }}
                     </div>
                     <div class="col-md-6">
-                        {{ form.phone_number|as_crispy_field }}
+                        {{ form.phone|as_crispy_field }}
                     </div>
                 </div>
                 
