--- a/templates/workflow/base.html
+++ b/templates/workflow/base.html
@@ -91,6 +91,12 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link {% if request.resolver_match.url_name == 'unit-list' %}active{% endif %}" 
+                                       href="{% url 'unit-list' %}">
+                                        <i class="fas fa-ruler"></i> واحدها
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link {% if request.resolver_match.url_name == 'driver-list' %}active{% endif %}" 
                                        href="{% url 'driver-list' %}">
                                         <i class="fas fa-truck"></i> رانندگان
@@ -145,10 +151,10 @@
         </div>
     </div>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script src="{% static 'js/custom.js' %}"></script>
     {% block extra_js %}{% endblock %}
