--- a/templates/workflow/delivery_report.html
+++ b/templates/workflow/delivery_report.html
@@ -1,4 +1,5 @@
 {% extends 'workflow/base.html' %}
+{% load workflow_filters %}
 
 {% block title %}گزارش تحویل - سیستم مدیریت انبار{% endblock %}
 
@@ -17,7 +18,6 @@
                             <th>کل سفارشات</th>
                             <th>تحویل شده</th>
                             <th>در انتظار</th>
-                            <th>نرخ تحویل</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -27,11 +27,10 @@
                             <td>{{ stat.total_orders }}</td>
                             <td>{{ stat.delivered_orders }}</td>
                             <td>{{ stat.pending_orders }}</td>
-                            <td>{{ stat.delivery_rate|floatformat:1 }}%</td>
                         </tr>
                         {% empty %}
                         <tr>
-                            <td colspan="5" class="text-center">اطلاعاتی یافت نشد.</td>
+                            <td colspan="4" class="text-center">اطلاعاتی یافت نشد.</td>
                         </tr>
                         {% endfor %}
                     </tbody>
