--- a/templates/workflow/orders_report.html
+++ b/templates/workflow/orders_report.html
@@ -5,6 +5,15 @@
 
 {% block title %}گزارش سفارشات - سیستم مدیریت انبار{% endblock %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="https://unpkg.com/persian-datepicker@1.2.0/dist/css/persian-datepicker.min.css">
+<style>
+    .datepicker-plot-area {
+        font-family: 'Vazirmatn', 'Tahoma', sans-serif;
+    }
+</style>
+{% endblock %}
+
 {% block content %}
 <div class="container-fluid mt-4">
     <div class="card shadow">
@@ -20,13 +29,15 @@
                 <div class="row g-3 align-items-end">
                     <div class="col-md-3">
                         <label for="start_date" class="form-label">از تاریخ</label>
-                        <input type="date" id="start_date" name="start_date" class="form-control" 
+                        <input type="text" id="start_date" name="start_date" class="form-control datepicker" 
                                value="{{ start_date|default:'' }}">
+                        <input type="hidden" id="start_date_hidden" name="start_date_hidden">
                     </div>
                     <div class="col-md-3">
                         <label for="end_date" class="form-label">تا تاریخ</label>
-                        <input type="date" id="end_date" name="end_date" class="form-control" 
+                        <input type="text" id="end_date" name="end_date" class="form-control datepicker" 
                                value="{{ end_date|default:'' }}">
+                        <input type="hidden" id="end_date_hidden" name="end_date_hidden">
                     </div>
                     <div class="col-md-3">
                         <label for="status" class="form-label">وضعیت</label>
@@ -189,4 +200,51 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block extra_js %}
+<script src="https://unpkg.com/persian-date@1.1.0/dist/persian-date.min.js"></script>
+<script src="https://unpkg.com/persian-datepicker@1.2.0/dist/js/persian-datepicker.min.js"></script>
+<script>
+    $(document).ready(function() {
+        // Initialize Persian DatePicker
+        $('.datepicker').persianDatepicker({
+            format: 'YYYY/MM/DD',
+            autoClose: true,
+            initialValueType: 'gregorian',
+            calendar: {
+                persian: {
+                    locale: 'fa'
+                }
+            },
+            onSelect: function(unix) {
+                // When a date is selected, set the hidden input value to ISO format for backend processing
+                var instance = $(this.model.inputElement).data("datepicker");
+                var selectedDate = new persianDate(unix);
+                var gregorianDate = selectedDate.toCalendar('gregorian').toLocale('en').format('YYYY-MM-DD');
+                
+                if ($(this.model.inputElement).attr('id') === 'start_date') {
+                    $('#start_date_hidden').val(gregorianDate);
+                } else if ($(this.model.inputElement).attr('id') === 'end_date') {
+                    $('#end_date_hidden').val(gregorianDate);
+                }
+            }
+        });
+        
+        // Form submission handling
+        $('form').on('submit', function(e) {
+            e.preventDefault();
+            var startDate = $('#start_date_hidden').val();
+            var endDate = $('#end_date_hidden').val();
+            var status = $('#status').val();
+            
+            var url = window.location.pathname + '?';
+            if (startDate) url += 'start_date=' + startDate + '&';
+            if (endDate) url += 'end_date=' + endDate + '&';
+            if (status) url += 'status=' + status;
+            
+            window.location.href = url;
+        });
+    });
+</script>
 {% endblock %} 
